--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,3 +7,18 @@
 
   font-family: "Poppins-Rg";
 }
+@keyframes slideIn {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* Apply animation */
+.animate-slideIn {
+  animation: slideIn 0.5s ease forwards;
+}
